[gd_scene load_steps=4 format=3 uid="uid://7t0b7tyu60uv"]

[ext_resource type="Script" path="res://Scripts/spit_blob.gd" id="1_g2p6t"]
[ext_resource type="Texture2D" uid="uid://dn6a7phkrtcaf" path="res://Assets/Visuals/Misc/PlaceholderChoiceButton.png" id="2_rw5hp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4tx0y"]
radius = 5.0

[node name="SpitBlob" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 0
collision_mask = 0
script = ExtResource("1_g2p6t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4tx0y")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4tx0y")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.407042, 0.981995, 0.820588, 1)
rotation = 3.14159
scale = Vector2(0.0328545, 0.0328545)
texture = ExtResource("2_rw5hp")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
